--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,19 @@ jobs:
     - name: Wait for commit statuses
       id: waitforstatuschecks
       uses: WyriHaximus/github-action-wait-for-status@0.1.0
+      with:
+        ignoreActions: Comment
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
     - name: Get branch name
       uses: nelonoel/branch-name@v1
 
-    - run: echo ${BRANCH_NAME}
-    - run: echo ${steps.waitforstatuschecks.outputs.status}
-
-    - name: PR Comment
+    - name: PR comment
       uses: github-actions-up-and-running/pr-comment@v1.0.0
       if: steps.waitforstatuschecks.outputs.status == 'success'
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         message: Nice PR!👍
+      env:
+        LABELS: comment
