--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
       uses: github-actions-up-and-running/pr-comment@v1.0.0
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        message: Nice PR!👍
+        myInput: Nice PR!
       env:
         LABELS: comment
