--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       uses: thollander/actions-comment-pull-request@1.0.0
       with:
         # Message that should be printed in the pull request
-        message: "BRANCH NAME: ${BRANCH_NAME}"
+        message: 'BRANCH NAME: ${{ BRANCH_NAME }}'
         # Github token of the repository (automatically created by Github)
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         LABELS: comment
